<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotasActivity"
    android:background="@drawable/calendario3">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="18dp"
        tools:ignore="ExtraText">

        <!--UID de usuario-->

        <!--Correo-->

        <!--Fecha-->
        <!--TITULO-->
        <EditText
            android:fontFamily="@font/roboto_bold"
            android:id="@+id/id_input_materia"
            android:hint="@string/input_materia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:autofillHints="" />

        <EditText
            android:fontFamily="@font/roboto_bold"
            android:id="@+id/input_tareas"
            android:hint="@string/tareas"
            android:layout_marginTop="10dp"
            android:minHeight="150dp"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"/>


        <CalendarView
            android:id="@+id/calendarView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_Entrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_Entrar"
            android:textColor="#433939"
            app:icon="@drawable/icono_calendario2" />

        <Button
            android:id="@+id/btn_guardarNota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_guardarNota"
            android:textColor="#433939"
            app:icon="@drawable/icono_calendario2" />

        <TextView
                android:fontFamily="@font/roboto_bold"
                android:id="@+id/id_Fecha"
                android:hint="@string/fecha"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="7dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:fontFamily="@font/roboto_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/estado"
                android:hint="@string/estado"/>

    </androidx.appcompat.widget.LinearLayoutCompat>




</ScrollView>